--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <p>- Vị trí NVVP nhập liệu</p>
           <p>- Ứng tuyển ca tối/đêm 20h - 5h</p>
+          <p>- Có tinh thần trách nhiệm, liêm chính trong công việc</p>
         </div>
       </div>
     
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Kinh nghiệm làm việc</h2>
         <div class="w3-container">
+          <p>- Sử dụng excel ở mức khá, có kỹ năng tìm kiếm thông tin nhanh</p>
           <p>- Chưa có kinh nghiệm về công việc nhập liệu</p>
         </div>
       </div>
